install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/phone_ctypes.py DESTINATION ${CMAKE_INSTALL_DATADIR})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/python_cli.py DESTINATION ${CMAKE_INSTALL_BINDIR}
        PERMISSIONS
        OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE)